@@ -1,3 +1,7 @@
+2011-08-19  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el (chmod+x): Fix chmod+x.
+
 2011-08-17  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-misc.el (and): Fix ac-modes.
